--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.mobileNavCSS {
+  position: absolute;
+  text-align: center;
+  top: 0;
+  left: 0;
+  padding-top: 64px;
+  width: 100%;
+  min-height: 100vh;
+  backdrop-filter: blur(8px);
+  font-size: xx-large;
+  font-weight: 800;
+}
